--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "bcryptjs": "^3.0.3",
     "lucide-react": "^0.562.0",
+    "mongodb": "^7.0.0",
     "next": "16.1.3",
     "next-auth": "^4.24.13",
     "react": "19.2.3",
